objects/AI_Credit_Tier__c/AI_Credit_Tier__c.object-meta.xml
<CustomObject>
    <label>AI Credit Tier</label>
    <nameField>
        <label>AI Credit Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Credit Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>