objects/AI_Credit_Tier__c/fields/Full_Amount__c.field-meta.xml
<CustomField>
    <fullName>Full_Amount__c</fullName>
    <description>Full Amount</description>
    <formula>Upper_Band__c -  Lower_Band__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Tier Amount, i.e. Upper Band - Lower Band</inlineHelpText>
    <label>Full Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>