objects/AI_Credit_Tier__c/fields/Full_Credits__c.field-meta.xml
<CustomField>
    <fullName>Full_Credits__c</fullName>
    <description>Full Credits</description>
    <formula>( Full_Amount__c /  Tanium_Cost_Per_Credit__c ) *  Marginal_Rate_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Credits for the Tier</inlineHelpText>
    <label>Full Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>