objects/AI_Credit_Tier__c/fields/Marginal_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Marginal_Rate_Percent__c</fullName>
    <label>Marginal Rate Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>