objects/AI_Credit_Tier__c/fields/Tanium_Cost_Per_Credit__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Cost_Per_Credit__c</fullName>
    <label>Tanium Cost Per Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>