objects/AI_Credit_Tier__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>