objects/AI_Credit_Tier__c/fields/Upper_Band__c.field-meta.xml
<CustomField>
    <fullName>Upper_Band__c</fullName>
    <description>Total Customer Software Spend</description>
    <label>Upper Band</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>