objects/AI_Credit_Tier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tier__c</columns>
    <columns>Lower_Band__c</columns>
    <columns>Upper_Band__c</columns>
    <columns>Full_Amount__c</columns>
    <columns>Marginal_Rate_Percent__c</columns>
    <columns>Tanium_Cost_Per_Credit__c</columns>
    <columns>Full_Credits__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>